--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -1,10 +1,10 @@
-fastapi
-uvicorn
-pymongo
+fastapi==0.95.2
+uvicorn==0.21.1
+pymongo==4.8.0
 python-dotenv
 passlib[bcrypt]
 pyjwt
-bson
+# bson
 sendgrid
 jinja2
 starlette
