--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -5,7 +5,7 @@ python-dotenv
 passlib[bcrypt]
 jwt==1.3.1
 # bson
-sendgrid
-jinja2
-starlette
-authlib
+sendgrid==6.11.0
+jinja2== 3.1.4
+starlette==0.27.0
+authlib==1.4.0
