--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -1,8 +1,8 @@
-fastapi==0.95.2
+fastapi==0.111.0
 uvicorn==0.21.1
 pymongo==4.8.0
 python-dotenv
-passlib[bcrypt]
+passlib==1.7.4
 jwt==1.3.1
 # bson
 sendgrid==6.11.0
