--- a/Backend/services/notification_service/Dockerfile
+++ b/Backend/services/notification_service/Dockerfile
@@ -6,9 +6,10 @@ RUN apt-get update && apt-get install -y \
     && rm -rf /var/lib/apt/lists/*
 
 COPY requirements.txt .
+COPY app/schema.py .
 RUN pip install --no-cache-dir -r requirements.txt
-COPY common/ ./common/
+
 COPY . .
 
 EXPOSE 8003
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8003"] 
+CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8002"] 
