--- a/Backend/services/property_service/Dockerfile
+++ b/Backend/services/property_service/Dockerfile
@@ -6,8 +6,9 @@ RUN apt-get update && apt-get install -y \
     && rm -rf /var/lib/apt/lists/*
 
 COPY requirements.txt .
+COPY app/schema.py .
 RUN pip install --no-cache-dir -r requirements.txt
-COPY common/ ./common/
+
 COPY . .
 
 EXPOSE 8003
