--- a/Backend/services/image_service/Dockerfile
+++ b/Backend/services/image_service/Dockerfile
@@ -7,8 +7,9 @@ RUN apt-get update && apt-get install -y \
 
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
-COPY common/ ./common/
-COPY . .
+
+# Copy the entire app directory
+COPY app/ ./app/
 
 EXPOSE 8003
 CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8003"] 
