--- a/Backend/service.yaml
+++ b/Backend/service.yaml
@@ -15,6 +15,7 @@ services:
       - access_token_expire_time=${Access_Token_Expire_Time}
       - CLIENT_ID=${CLIENT_ID}
       - CLIENT_SECRET=${CLIENT_SECRET}
+      - password= ${REDIS_PASSWORD}
     networks:
       - sevenspace_network
 
