--- a/Backend/services/auth_service/requirements.txt
+++ b/Backend/services/auth_service/requirements.txt
@@ -11,3 +11,6 @@ starlette==0.37.2
 itsdangerous==2.2.0
 authlib==1.4.0
 redis==6.2.0
+google-auth 
+google-auth-oauthlib 
+google-auth-httplib2 authlib
