--- a/Frontend/sevenspace/vercel.json
+++ b/Frontend/sevenspace/vercel.json
@@ -1,13 +1,7 @@
 {
-  "builds": [
-    {
-      "src": "index.html",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "dist"
-      }
-    }
-  ],
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist",
+  "framework": "vite",
   "routes": [
     {
       "src": "/(.*)",
